test/errors/string_lchar_concat_fail.hy
int main()
{
    string base = "x"
    lchar wide = 0
    string bad = base + wide
    return 0
}